@libraries/blipjs/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
    --primary-hue: 0;
    --primary-saturation: 80%;
    --primary-lightness: 59%;
    --primary: hsl(var(--primary-hue), var(--primary-saturation), var(--primary-lightness));
    --foreground: hsl(0, 0%, 100%);
    --background-hue: 200;
    --background-saturation: 15%;
    --background-lightness: 7%;
    --background: hsl(var(--background-hue), var(--background-saturation), var(--background-lightness));
    --background-lighter: hsl(var(--background-hue), var(--background-saturation), calc(var(--background-lightness) + 6%));
    --border-radius: 0px;
    --nav-animation-time: 500ms;
    overflow-y: scroll;
    scrollbar-color: var(--primary) transparent;
    scrollbar-width: thick;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-corner {
    background: transparent;
}

::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: var(--primary);
    border-radius: 20px;
}


* {
    font-size: 1rem;
}

body {
    font-family: 'Roboto';
    color: var(--foreground);
    background-color: var(--background);
    margin: 0;
    padding: 0;
    overflow: overlay;
}

main>* {
    padding-top: 150px;
}

main>*:not(.landing) {
    z-index: 3;
}

h1 {
    font-size: 4.5rem;
    font-weight: 800;
}

h2 {
    font-size: 3.75rem;
    font-weight: 400;
}

h3 {
    font-size: 3rem;
    font-weight: 200;
}

h4 {
    font-size: 2rem;
    font-weight: 200;
}

section {
    padding: 2rem 1rem;
}

.col, .row {
    display: flex;
    overflow: scroll;
    flex-wrap: wrap;
}

.centered {
    margin: auto;
    justify-content: center;
    align-content: center;
    height: 100%;
    width: 100%;
}

.grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.grid>* {
    flex-grow: 1;
    width: 20%;
}

.col {
    flex-direction: column;
}

.row {
    flex-direction: row;
}

.play {
    background-image: url('../../@icons/play-button.svg');
}

.pause {
    background-image: url('../../@icons/pause-button.svg');
}


.play, .pause {
    content: '';
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    width: 15px;
    aspect-ratio: 1/1;
}

.border {
    max-width: calc(100% - 2px);
    max-height: calc(100% - 2px);
    border: 1px solid var(--primary);
}

.grow {
    box-shadow: 0 0 5px 0px rgba(0, 0, 0, 1);
    transition: transform 500ms, box-shadow 200ms;
}

.grow:hover {
    filter: unset;
    box-shadow: 0 0 15px 15px rgba(0, 0, 0, 0.5);
    transform: scale(1.01);
}

.lift {

    transition: transform 500ms;
}

.lift:hover {
    transform: translateY(-5%);
}

a {
    text-decoration: none;
    color: var(--primary);
    position: relative;
    font-size: inherit;
    transition: font-weight 200ms;
    width: fit-content;
}

a:after, .underline:after, dropdown:before {
    content: '';
    border-bottom: 3px solid var(--primary);
    position: absolute;
    max-width: 0px;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    transition: max-width 500ms;
}

a:hover {
    font-weight: 900;
}

a:hover:after, .underline:hover:after, dropdown:hover:before, .underline[show]::after {
    max-width: 100%;
}

p.\31 {
    font-size: 1.5rem;
}

p.\32 {
    font-size: 1.3rem;
}

p.\33 {
    font-size: 1.2rem;
}

p.\34 {
    font-size: 1rem;
}

.primary {
    color: var(--primary);
}

.glow {
    box-shadow: 0 0 15px 5px var(--primary);
}

.glow-hover {
    transition: box-shadow 500ms;
    box-shadow: 0 0 0px 0px var(--primary);
}

.glow-hover:hover {
    box-shadow: 0 0 15px 5px var(--primary);
}

button {
    color: var(--foreground) !important;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 1rem;
    margin: 1rem;
    font-weight: 600;
    box-shadow: 0 0 0px 0px rgba(0, 0, 0, 1);
    width: calc(100% - 2rem);
    border-radius: var(--border-radius);
    transition: filter 200ms, transform 500ms, box-shadow 500ms, background 500ms, color 200ms;
}

button.primary {
    background-color: var(--primary);
}

button.secondary {
    background-color: var(--foreground);
    color: var(--background) !important;
}

button:hover {
    filter: contrast(1.1) brightness(.7);
}

button.outline {
    background-color: transparent;
    outline: 2px solid var(--primary);
}

button.outline:hover {
    filter: unset;
    background: var(--primary);
}

button.outline.secondary {
    color: var(--foreground) !important;
    outline-color: var(--foreground);
}

button.outline.secondary:hover {
    background-color: var(--foreground);
    color: var(--background) !important;
}

.landing {
    display: flex;
    position: relative;
    max-width: 100vw;
    width: 100vw;
    max-height: 100vh;
    height: 100vh;
    min-height: 800px;
    overflow: hidden;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    margin-bottom: -50vh;
    z-index: -1;
}

.landing::before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1;
    background: linear-gradient(rgba(0, 0, 0, 0.5), var(--background));
}

.landing>* {
    z-index: 2;
    padding: 2rem;
}

.video-player {
    position: relative;
    overflow: hidden;
    display: flex;
    justify-content: center;
}

.video-player>video {
    cursor: pointer;
    max-height: 100%;
    max-width: 100%;
}

.video-player .controls {
    position: absolute;
    bottom: 0;
    left: 0;
    height: 4rem;
    width: 100%;
    display: flex;
    align-items: center;
    transform: translateY(4rem);
    transition: transform 500ms;
    z-index: 2;
}

.video-player:not(.show) .controls {
    transform: translateY(4rem) !important;
}

.video-player:not(.show) {
    cursor: none;
}
/* ... */

